# warhexmap

./: CHANGELOG.md  Cargo.toml  INSTRUCTIONS.md  main.py
.claude/: settings.local.json
hex_terrain_editor/: app.py  main.py
hex_terrain_editor/editor/: brush_tool.py  eraser_tool.py  eyedropper_tool.py  label_tool.py  pen_tool.py  select_tool.py  tool_manager.py
hex_terrain_editor/model/: hex_cell.py  hex_grid.py  path_feature.py  project.py  terrain_types.py
hex_terrain_editor/renderer/: blend_engine.py  compositor.py  decorator_renderer.py  hillshade.py  label_renderer.py  terrain_painter.py  tile_cache.py  tile_renderer.py
hex_terrain_editor/ui/: map_viewport.py  minimap.py  palette_panel.py  properties_panel.py  toolbar.py
hex_terrain_editor/utils/: color_palettes.py  curve_simplify.py  hex_math.py  noise.py
src/: app.rs  hex_math.rs  main.rs  types.rs
src/editor/: brush_tool.rs  curve_simplify.rs  eraser_tool.rs  eyedropper_tool.rs  label_tool.rs  map_editor.rs  mod.rs  pen_tool.rs  select_tool.rs  sprite_editor.rs  tool_manager.rs  tools.rs  undo.rs
src/hex/: geometry.rs  map.rs  mod.rs
src/model/: hex_cell.rs  hex_grid.rs  mod.rs  path_feature.rs  project.rs  terrain_types.rs
src/project/: mod.rs  save_load.rs
src/renderer/: camera.rs  decorator_renderer.rs  gpu_state.rs  grid_overlay.rs  hex_mesh.rs  minimap.rs  mod.rs  path_renderer.rs  terrain_textures.rs
src/shaders/: decorator.wgsl  grid_overlay.wgsl  path.wgsl  terrain.wgsl
src/sprites/: atlas.rs  clipboard.rs  image_ops.rs  mod.rs
src/ui/: editor_ui.rs  minimap_widget.rs  mod.rs  (+3 more)
