[package]
name = "warhexmap"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "24"
winit = "0.30"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
uuid = { version = "1", features = ["v4", "serde"] }
noise = "0.9"
log = "0.4"
env_logger = "0.11"
rfd = "0.15"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
