[package]
name = "warhexmap"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = "0.25"
arboard = { version = "3", features = ["image-data"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rfd = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
